--- a/YellowstonePathology/UI/MaterialTracking/MaterialTrackingStartPage.xaml
+++ b/YellowstonePathology/UI/MaterialTracking/MaterialTrackingStartPage.xaml
@@ -53,6 +53,10 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -105,11 +109,19 @@
                 <TextBlock Grid.Column="0" Grid.Row="19" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkReceiveMaterialFromBillings_Click">Receive Material From Billings</Hyperlink>
                 </TextBlock>
-                
+
+                <TextBlock Grid.Column="0" Grid.Row="21" Margin="2,2,2,2">Location Bozeman</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="22" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkSendMaterialFromBillingsToBozeman_Click">Send Material to Bozeman</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="24" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkReceiveMaterialFromBozeman_Click">Receive Material From Bozeman</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="25" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkViewSelectedBatch_Click">View Selected Batch</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="23" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="26" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkDeleteSelectedBatch_Click">Delete Selected Batch</Hyperlink>
                 </TextBlock>
 
