--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -10,6 +10,75 @@
         
         <TemplateSelectorUI:TaskOrderDetailTemplateSelector x:Key="TaskOrderDetailTemplateSelector"/>
 
+        <DataTemplate x:Key="FaxTaskOrderDetailDataTemplate">
+            <Grid>
+                <Border BorderThickness="1" Margin="0,0,0,0" CornerRadius="5">
+
+                    <Grid Margin="2,2,2,2" HorizontalAlignment="Stretch">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Fax Number:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=FaxNumber}" IsEnabled="{Binding Path=PropertiesAreEnabled}"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Atention:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=SendToName}" IsEnabled="{Binding Path=PropertiesAreEnabled}"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
+                        <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
+                                ItemsSource="{Binding DataContext.TaskAssignmentList, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                        </ComboBox>
+
+                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged By:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedByInitials}" />
+
+                        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged Date:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
+
+                        <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="4" Margin="10,10,10,10">
+
+                            <TextBlock Margin="2,2,2,2">
+                                <Hyperlink Click="HyperLinkSendFax_Click" Tag="{Binding Path=.}">Send Fax</Hyperlink>
+                            </TextBlock>
+
+                            <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,2">
+                                            <Hyperlink Click="HyperLinkAcknowledge_Click" Tag="{Binding Path=.}">Acknowledge</Hyperlink>
+                            </TextBlock>
+
+
+                            <TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,2">
+                                            <Hyperlink Click="HyperLinkDelete_Click" Tag="{Binding Path=.}">Delete</Hyperlink>
+                            </TextBlock>
+
+                            <TextBlock Grid.Column="2" Grid.Row="3" Margin="2,2,2,2">
+                                            <Hyperlink Click="HyperLinkUnacknowledge_Click" Tag="{Binding Path=.}">Unacknowledge</Hyperlink>
+                            </TextBlock>
+                        </StackPanel>
+
+                    </Grid>
+                </Border>
+            </Grid>
+        </DataTemplate>
+
         <DataTemplate x:Key="FedexShipmentTaskOrderDetailDataTemplate">
             <Grid>
                 <Border BorderThickness="1" Margin="0,0,0,0" CornerRadius="5">
@@ -249,6 +318,9 @@
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkSendAddGenericTask_Click">Add Generic Task</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
+                    <Hyperlink Click="HyperLinkAddSendFaxTask_Click">Add Send Fax Task</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5" VerticalAlignment="Bottom">
                     <Hyperlink Click="HyperlingPrintTaskOrder_Click">Print (1 copy)</Hyperlink>
