--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -37,22 +37,33 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Fax Number:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=FaxNumber}" IsEnabled="{Binding Path=PropertiesAreEnabled}"/>
+                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Primary Insurance:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="1" Text="{Binding DataContext.AccessionOrder.PrimaryInsurance, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}" HorizontalAlignment="Stretch" Margin="2,2,2,2">
+                            <ComboBoxItem Content="Not Selected"></ComboBoxItem>
+                            <ComboBoxItem Content="Medicare"></ComboBoxItem>
+                            <ComboBoxItem Content="Medicaid"></ComboBoxItem>
+                            <ComboBoxItem Content="BCHP"></ComboBoxItem>
+                            <ComboBoxItem Content="BCBS"></ComboBoxItem>
+                            <ComboBoxItem Content="Governmental"></ComboBoxItem>
+                            <ComboBoxItem Content="Commercial"></ComboBoxItem>
+                        </ComboBox>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Fax Number:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=FaxNumber}"/>
 
-                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Atention:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=SendToName}" IsEnabled="{Binding Path=PropertiesAreEnabled}"/>
+                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Atention:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=SendToName}"/>
 
-                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
-                        <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
+                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
+                        <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
                                 ItemsSource="{Binding DataContext.TaskAssignmentList, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
                         </ComboBox>
 
-                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged By:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedByInitials}" />
+                        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged By:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedByInitials}" />
 
-                        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged Date:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
+                        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged Date:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
 
                         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="4" Margin="10,10,10,10">
 
