--- a/YellowstonePathology/UI/Monitor/AutopsyRequestMonitorPage.xaml
+++ b/YellowstonePathology/UI/Monitor/AutopsyRequestMonitorPage.xaml
@@ -2,7 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">	
 	<Grid>
-		<TextBox Name="MyRectangle" Text="There is an unread message from Dr. Kurtzman for Histology" FontSize="46" Foreground="#e12d0e" 
+		<TextBox Name="MyRectangle" Text="There are unread messages in the Histology mailbox" FontSize="46" Foreground="#e12d0e" 
 		         HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="10" Margin="10,10,10,10" Padding="10,10,10,10">
 			<TextBox.BorderBrush>
                 <SolidColorBrush x:Name="redBrush" Color="Red" />
