--- a/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
+++ b/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
@@ -46,6 +46,9 @@
                     <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Dr. Kurtzman Cases:" />
                     <Button Grid.Column="2" Grid.Row="5" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonDrKurtzmanCaseSearch_Click">Search</Button>
 
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Invalid Final:" />
+                    <Button Grid.Column="2" Grid.Row="6" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonInvalidFinal_Click">Search</Button>
+
                 </Grid>
             </TabItem>            
             <TabItem Header="Specimen Keyword">
