--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -109,18 +109,15 @@
             </TabItem>
 
             <TabItem Header="Autopsy Cases">
-                <ListView Name="ListViewAutopsyCases" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=EmbeddingAutopsyCaseList}">
+                <ListView Name="ListViewAutopsyScans" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=EmbeddingAutopsyList}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Master Accession No" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
-                            <GridViewColumn Header="First" Width="100" DisplayMemberBinding="{Binding Path=PFirstName}" />
-                            <GridViewColumn Header="Last" Width="100" DisplayMemberBinding="{Binding Path=PLastName}" />
-                            <GridViewColumn Header="Collected" Width="130" DisplayMemberBinding="{Binding Path=CollectionDate, Converter={StaticResource ShortDateConverter}}" />
-                            <GridViewColumn Header="Start" Width="150" DisplayMemberBinding="{Binding Path=FixationStartTime, Converter={StaticResource MilitaryDateTimeConverter}}" />
-                            <GridViewColumn Header="End" Width="150" DisplayMemberBinding="{Binding Path=FixationEndTime}" />
-                            <GridViewColumn Header="Expected" Width="120" DisplayMemberBinding="{Binding Path=FixationDurationExpected}" />
-                            <GridViewColumn Header="Actual" Width="120" DisplayMemberBinding="{Binding Path=FixationDuration}" />
-                            <GridViewColumn Header="Description" Width="300" DisplayMemberBinding="{Binding Path=Description}" />
+                            <GridViewColumn Header="Block" Width="100" DisplayMemberBinding="{Binding Path=AliquotOrderId}" />
+                            <GridViewColumn Header="Scanned" Width="130" DisplayMemberBinding="{Binding Path=DateScanned, Converter={StaticResource MilitaryDateTimeConverter}}" />
+                            <GridViewColumn Header="Started" Width="200" DisplayMemberBinding="{Binding Path=ProcessorStartTime, Converter={StaticResource MilitaryDateTimeConverter}}" />
+                            <GridViewColumn Header="Duration" Width="150" DisplayMemberBinding="{Binding Path=ProcessorFixationDuration}" />
+                            <GridViewColumn Header="By" Width="150" DisplayMemberBinding="{Binding Path=ScannedBy}" />
+                            <GridViewColumn Header="By" Width="150" DisplayMemberBinding="{Binding Path=Updated}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
